<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="minus">-</string>
    <string name="square">x²</string>
    <string name="fact">x!</string>
    <string name="cube">x³</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="add">+</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="del">DEL</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sqrt">√</string>
    <string name="rad">Rad</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="emp"></string>
    <string name="dom">1/x</string>
    <string name="e">e</string>
    <string name="plumin">±</string>
    <string name="pi">π</string>
    <string name="ee">e^x</string>
    <string name="mod">%</string>
    <string name="bow">( )</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="mp">M+</string>
    <string name="n">N</string>



</resources>
