<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/buttons"
    >
    <TextView
        android:id="@+id/resultCalc"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/textview_draw"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textColor="@color/texts"
        android:fontFamily="Dancing-Script-Bold" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/resultCalc">
        <TableRow>
            <Button
                android:id="@+id/delBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/del"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/plusminBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/plumin"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/sqrtBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sqrt"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/c"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/bowBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bow"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/modeBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/mod"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/divBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/div"
                android:background="@drawable/white_buttons"
                android:textColor="@color/specialtexts"
                android:textSize="20sp"
                />

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/sinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sin"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/cosBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cos"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/tanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tan"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/sevBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_7"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/eightBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_8"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_draw"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textColor="@color/texts"
                android:textSize="20sp" />
            <Button
                android:id="@+id/mulBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/mult"
                android:background="@drawable/white_buttons"
                android:textColor="@color/specialtexts"
                android:textSize="20sp"
                />

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/logBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/log"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/lnBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ln"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/domenaterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/dom"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />



            <Button
                android:id="@+id/fourBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_draw"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="@color/texts"
                android:textSize="20sp" />
            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="5"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/sixBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="6"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/minBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/minus"
                android:background="@drawable/white_buttons"
                android:textColor="@color/specialtexts"
                android:textSize="20sp"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/eBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/e"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/piBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/pi"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/eeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ee"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="1"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/twoBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="2"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="3"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/pluBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/add"
                android:background="@drawable/white_buttons"
                android:textColor="@color/specialtexts"
                android:textSize="20sp"
                />
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/factBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/fact"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/seqBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/square"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/cubeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cube"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_0"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/dotBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="."
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/equalBtn"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/equal"
                android:background="@drawable/textview_draw"
                android:textColor="@color/texts"
                android:textSize="20sp"
                />
        </TableRow>

    </TableLayout>
    <ImageView
        android:id="@+id/rotate"
        android:background="@drawable/rotate"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"/>
</RelativeLayout>