<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/buttons">


    <TextView
        android:id="@+id/resultCalc"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/textview_draw"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textColor="@color/texts"
        android:fontFamily="Dancing-Script-Bold" />
    <TableLayout
        android:id="@+id/calBody"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/resultCalc"
        android:layout_width="265dp"
        android:layout_height="260dp"
        android:layout_marginStart="12dp">
        <TableRow>

            <Button
                android:id="@+id/divBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_draw"
                android:text="@string/div"
                android:textAlignment="center"
                android:textColor="@color/texts"
                android:textSize="30sp" />

            <Button
                android:id="@+id/mulBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mult"
                android:textAlignment="center"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/minBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textAlignment="center"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"/>

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/sevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_7"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_8"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/nineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_9"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />

        </TableRow>
        <TableRow>



            <Button
                android:id="@+id/fourBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_draw"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="@color/texts"
                android:textSize="30sp" />
            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="5"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/sixBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="6"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30dp"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/oneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="1"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/twoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="2"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="3"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/dotBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="."
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_0"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/c"
                android:background="@drawable/button_draw"
                android:textColor="@color/texts"
                android:textSize="30sp"
                />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_below="@+id/resultCalc"
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/del"
        android:background="@drawable/button_draw"
        android:textColor="@color/texts"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/calBody"
        android:layout_marginTop="100dp"
        />
    <Button

        android:id="@+id/pluBtn"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:background="@drawable/button_draw"
        android:textColor="@color/texts"
        android:textSize="40sp"
        android:layout_below="@+id/delBtn"
        android:layout_toRightOf="@+id/calBody"
        />
    <Button
        android:layout_below="@+id/pluBtn"
        android:layout_toRightOf="@+id/calBody"
        android:id="@+id/equalBtn"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:text="@string/equal"
        android:background="@drawable/button_draw"
        android:textColor="@color/texts"
        android:textSize="40sp"
        />

</RelativeLayout>